syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
  string createdAt = 6;
  string updatedAt = 7;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 quantity = 4;
}
message CreateProductResponse { Product product = 1; }

message GetProductRequest { int64 id = 1; }
message GetProductResponse { Product product = 1; }

message ListProductsRequest { int32 limit = 1; int32 offset = 2; }
message ListProductsResponse { repeated Product products = 1; int32 total = 2; }

message UpdateProductRequest {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
}
message UpdateProductResponse { Product product = 1; }

message DeleteProductRequest { int64 id = 1; }
message DeleteProductResponse { bool success = 1; }
